tests/compile_error/chained_assignment.xprshn
// Compile error: chained assignment (if supported)
int a!
int b!
a = b = 5! // Chained assignment 